[metadata]
name = verify_protocol
version = 0.1.dev0
author = Gouji Ochiai
author_email = gjo.ext@gmail.com
url = https://github.com/gjo/verify_protocol/
description = verify utility for typing Protocol
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license = MIT
license-file = COPYING.txt
platform = any
classifiers =
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython

[options]
include_package_data = true
install_requires =
py_modules = verify_protocol
python_requires = >=3.8
zip_safe = false

[options.extras_require]
develop =
  pytest
  pytest-randomly
testing =
  pytest
  pytest-randomly

[bdist_wheel]
universal = 0

[check-manifest]
ignore =
  PKG-INFO
  *.egg-info
  *.egg-info/*

[coverage:run]
source =
  verify_protocol
  tests

[flake8]
ignore =
;  # E203: whitespace before ':' (black fails to be PEP8 compliant)
;  E203
;  # E731: do not assign a lambda expression, use a def
;  E731
;  # W503: line break before binary operator (flake8 is not PEP8 compliant)
;  W503
;  # W504: line break after binary operator (flake8 is not PEP8 compliant)
;  W504
exclude =
  .tox
  .env
  build
  dist
show-source = True
